[package]
name = "dir-test"
authors = ["The Fe Project Developers"]
version = "0.2.0"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fe-lang/dir-test"
description = "Provides a macro to generate tests from files in a directory"
keywords = ["test", "dir", "directory", "macro"]
categories = ["development-tools", "filesystem"]


[dependencies]
dir-test-macros = { version = "0.2.0", path = "../macros"  }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
