[package]
name = "dir-test-macros"
authors = ["The Fe Project Developers"]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fe-lang/dir-test"
description = "Provides a procedural macro for `dir-test`"


[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
glob = "0.3"
